--- a/javascript/package.json
+++ b/javascript/package.json
@@ -15,7 +15,8 @@
     "@babel/preset-env": "^7.24.8",
     "babel-jest": "^29.7.0",
     "eslint": "^9.7.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "ts-node": "^10.9.2"
   },
   "type": "module"
 }
